fix(GUI): align star with ID link

--- a/gist-viewer/styles/index.module.css
+++ b/gist-viewer/styles/index.module.css
@@ -15,3 +15,8 @@
 .formLabel {
     font-size: 1.5rem;
 }
+
+.starAndIdWrapper {
+    display: flex;
+    align-items: center;
+}
